# db-lab2

./: README.md  pyproject.toml  run.bat  run.sh
examples/: exercise.txt
src/cli/: simple.py
src/lock_manager/: __init__.py  simple.py
tests/: test_cli.py  test_simple.py  test_simple_str.py
