[project]
name = "lock_manager"
version = "0.0.2"
authors = [
    { name = "Sebastian Tabares Amaya 思博", email = "me@syta.co" },
]
description = "a Simple lock manager for concurrent transactions"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
]

[project.scripts]
lock-manager = "cli.simple:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lock_manager"]
package-dir = {"lock_manager" = "src/lock_manager"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]